# bruno-memory

./: .pre-commit-config.yaml  404.html  ALIGNMENT_VERIFICATION.md  CHANGELOG.md  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  DETAILED_IMPLEMENTATION_PLAN.md  DOCKER_TESTING_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE_13_SUMMARY.md  PROJECT_STATUS.md  README.md  index.html  instructions.md  objects.inv  project_overview.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  dependencies.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
TESTING/: index.html
about/changelog/: index.html
about/license/: index.html
api/factory/: index.html
api/utils/cache/: index.html
bruno_memory/: __init__.py  __version__.py  exceptions.py  factory.py
bruno_memory/backends/: __init__.py
bruno_memory/backends/postgresql/: __init__.py  backend.py  schema.py
bruno_memory/backends/redis/: __init__.py  backend.py
bruno_memory/backends/sqlite/: __init__.py  backend.py  migrations.py  schema.py
bruno_memory/backends/vector/: __init__.py  chromadb_backend.py  qdrant_backend.py
bruno_memory/base/: __init__.py  base_backend.py  config.py  memory_config.py
bruno_memory/managers/: __init__.py  compressor.py  context_builder.py  conversation.py  embedding.py  retriever.py
bruno_memory/utils/: __init__.py  analytics.py  backup.py  cache.py  performance.py  prioritization.py  security.py
development/contributing/: index.html
docs/: index.md
examples/: basic_usage.py
getting-started/quickstart/: index.html
guide/backends/: index.html
how-to/CI_CD_GUIDE/: index.html
how-to/HOW_TO_RELEASE/: index.html
scripts/: bump_version.py
search/: search_index.json
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_analytics.py  test_backup.py  test_base_backend.py  test_cache.py  test_chromadb_backend.py  test_compressor.py  test_config.py  test_embedding_manager.py  test_factory.py  test_memory_config.py  test_performance.py  test_postgresql_backend.py  test_prioritization.py  test_qdrant_backend.py  test_redis_backend.py  test_security.py  test_sqlite_backend.py
