[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bruno-memory"
version = "0.1.0"
description = "Memory storage and retrieval system for Bruno AI Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Meggy AI", email = "info@meggy.ai" },
]
keywords = [
    "ai",
    "assistant",
    "memory",
    "conversation",
    "storage",
    "bruno",
    "llm",
    "chatbot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bruno-core>=0.1.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
sqlite = [
    "aiosqlite>=0.19.0",
]
postgresql = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
vector = [
    "chromadb>=0.4.18",
    "qdrant-client>=1.7.0",
]
embeddings = [
    "bruno-llm>=0.1.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
]
all = [
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5.0.0",
    "chromadb>=0.4.18",
    "qdrant-client>=1.7.0",
    "bruno-llm>=0.1.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/meggy-ai/bruno-memory"
Documentation = "https://github.com/meggy-ai/bruno-memory/docs"
Repository = "https://github.com/meggy-ai/bruno-memory"
Issues = "https://github.com/meggy-ai/bruno-memory/issues"
Changelog = "https://github.com/meggy-ai/bruno-memory/blob/main/CHANGELOG.md"

[project.entry-points."bruno.memory_backends"]
sqlite = "bruno_memory.backends.sqlite:SQLiteBackend"
postgresql = "bruno_memory.backends.postgresql:PostgreSQLBackend"
redis = "bruno_memory.backends.redis:RedisBackend"
chromadb = "bruno_memory.backends.vector:ChromaDBBackend"
qdrant = "bruno_memory.backends.vector:QdrantBackend"

[tool.hatch.build.targets.wheel]
packages = ["bruno_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=bruno_memory",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["bruno_memory"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "qdrant_client.*",
    "redis.*",
]
ignore_missing_imports = true
